@@ -137,6 +137,7 @@
                     "type": "object",
                     "required": [
                         "period",
+                        "unit",
                         "value"
                     ],
                     "properties": {
@@ -146,9 +147,24 @@
                                 "Post-natal"
                             ]
                         },
+                        "unit": {
+                            "description": "The unit of the age value.",
+                            "enum": [
+                                "days",
+                                "weeks",
+                                "months",
+                                "years"
+                            ]
+                        },
                         "value": {
-                            "description": "Age in days.",
-                            "type": "number"
+                            "description": "Age value, must be positive. If the 'range_end_value' is set, indicates the start of the range.",
+                            "type": "number",
+                            "minimum": 0
+                        },
+                        "range_end_value": {
+                            "description": "Optional field, if set the age is a range. This value indicates the end of the range. Must be larger than the 'value' field.",
+                            "type": "number",
+                            "minimum": 0
                         }
                     },
                     "additionalProperties": false
@@ -173,6 +189,7 @@
             "type": "object",
             "required": [
                 "title",
+                "license",
                 "categories",
                 "protocol"
             ],
